--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -61,7 +61,7 @@
 							autofocus="autofocus" />
 					</div>
 
-					<div class="form-group">
+					<div class="form-group mt-2">
 						<div class="row">
 							<div class="col-sm-6 col-sm-offset-3">
 								<input type="submit" name="login-submit" id="login-submit"
