--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml"
-	xmlns:th="http://www.thymeleaf.org">
+	xmlns:th="http://www.thymeleaf.org"
+	xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity5">
 <head>
 <meta charset="UTF-8">
 <title>Spring Security || Registration and Login</title>
@@ -22,16 +23,16 @@
 				<span class="navbar-toggler-icon"></span>
 			</button>
 			<div class="collapse navbar-collapse" id="navbarSupportedContent">
-				<ul class="navbar-nav me-auto mb-2 mb-lg-0">
-					<li class="nav-item"><a class="nav-link" aria-current="page"
-						href="#">Login</a></li>
-				</ul>
+				
 			</div>
 		</div>
 	</nav>
-	
+
 	<div class="container mt-2">
-	<h1>Registration and Login with Spring Boot, Spring Security, Hybernate, MYSQL and Thymeleaf</h1>
+		<h1>Registration and Login with Spring Boot, Spring Security,
+			Hybernate, MYSQL and Thymeleaf</h1>
+			
+			Welcome : <span sec:authentication="principal.username">User</span>
 	</div>
 
 	<script
