--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -23,7 +23,10 @@
 				<span class="navbar-toggler-icon"></span>
 			</button>
 			<div class="collapse navbar-collapse" id="navbarSupportedContent">
-				
+				<ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+					<li sec:authorize="isAuthenticated()" class="nav-item"><a
+						class="nav-link" aria-current="page" th:href="@{/logout}">Logout</a></li>
+				</ul>
 			</div>
 		</div>
 	</nav>
@@ -31,8 +34,8 @@
 	<div class="container mt-2">
 		<h1>Registration and Login with Spring Boot, Spring Security,
 			Hybernate, MYSQL and Thymeleaf</h1>
-			
-			Welcome : <span sec:authentication="principal.username">User</span>
+
+		Welcome : <span sec:authentication="principal.username">User</span>
 	</div>
 
 	<script
